fix: header overlap

--- a/src/features/home/sections/SecondViewSection/SecondViewSection.module.scss
+++ b/src/features/home/sections/SecondViewSection/SecondViewSection.module.scss
@@ -59,7 +59,7 @@
       @include text-h2;
       text-align: center;
       margin-bottom: 40px;
-      white-space: nowrap;
+
       @media (max-width: $small-medium-desktop) {
         font-size: clamp(1.75rem, 2.8vw, 2.25rem);
       }
@@ -183,7 +183,6 @@
       @include text-big-button;
       text-align: center;
       margin-bottom: 24px;
-      white-space: nowrap;
       line-height: 129%;
     }
   }
